--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body{
     padding: 0;
     /* background-color: rgb(227,237,246); */
 }
+.App.dark{
+    background-color:rgb(30,41,59);
+}
+*{
+    transition: all 0.3s;
+}
