--- a/src/layouts/ProductsLayout/ProductLayout.css
+++ b/src/layouts/ProductsLayout/ProductLayout.css
@@ -2,7 +2,9 @@
     width: 98%;
     margin: 0 auto;
 }
-
+.product-layout.dark h1{
+    color: white;
+}
 .product-layout .children{
     display: grid;
     grid-template-columns: repeat(4,auto);
