--- a/src/pages/Category/Category.css
+++ b/src/pages/Category/Category.css
@@ -1,4 +1,11 @@
 .category-page{
     font-size: 1.5rem;
+}
+.category-page{
+    width: 98%;
+    margin: 0 auto;
+}
+
+.category-page.dark .title{
     color: white;
 }
